Migrate from deprecated URLEncoder to URI (#2970)
* Migrate from deprecated java.net.URL to java.net.URI

java.net.URL has been deprecated in recent Java versions, so this commit
migrates all usages to the recommended java.net.URI class.

Changes:
- ProtocolHelper.java: Convert URL to URI using toURI() method for
  ClassLoader resources, update protocol checks to use getScheme()
  instead of getProtocol()
- FessXpathTransformer.java: Replace all URL instances with URI,
  use URI.create() and URI.resolve() for URL construction and
  relative URL resolution, update exception handling from
  MalformedURLException to IllegalArgumentException

Note: fess-crawler library changes are handled separately as mentioned
by the user.

* Fix compatibility with fess-crawler library

Add URL-to-URI conversion layer to maintain compatibility with the
fess-crawler parent class (XpathTransformer) which still uses
java.net.URL.

Changes:
- getBaseUrl(): Return URL instead of URI, internally use URI.toURL()
- addChildUrlFromTagAttribute(): Accept URL parameter and convert to
  URI internally for modern URL handling
- This allows internal use of URI while maintaining API compatibility
  with the parent class

Note: Once fess-crawler is updated to use URI, these compatibility
conversions can be removed.

* Complete migration from java.net.URL to java.net.URI

- Change getBaseUrl() to getBaseUri() returning URI instead of URL
- Update getAnchorList() to use URI-based methods
- Override addChildUrlFromTagAttribute() with URI parameter instead of URL
- Update test to use new getBaseUri() method

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>

---------

Co-authored-by: Claude <noreply@anthropic.com>