@@ -18,8 +18,8 @@ package org.codelibs.fess.crawler.transformer;
 import static org.codelibs.core.stream.StreamUtil.stream;
 
 import java.io.BufferedInputStream;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -410,12 +410,12 @@ public class FessXpathTransformer extends XpathTransformer implements FessTransf
             value = urlStr;
         }
         try {
-            final URL url = new java.net.URL(value);
-            final String host = url.getHost();
+            final URI uri = URI.create(value);
+            final String host = uri.getHost();
             if (StringUtil.isBlank(host) || "http".equalsIgnoreCase(host) || "https".equalsIgnoreCase(host)) {
                 return false;
             }
-        } catch (final MalformedURLException e) {
+        } catch (final IllegalArgumentException e) {
             return false;
         }
         return true;
@@ -725,9 +725,10 @@ public class FessXpathTransformer extends XpathTransformer implements FessTransf
      */
     protected String normalizeCanonicalUrl(final String baseUrl, final String canonicalUrl) {
         try {
-            final URL u = new URL(baseUrl);
-            return new URL(u, canonicalUrl.startsWith(":") ? u.getProtocol() + canonicalUrl : canonicalUrl).toString();
-        } catch (final MalformedURLException e) {
+            final URI baseUri = URI.create(baseUrl);
+            final String resolveTarget = canonicalUrl.startsWith(":") ? baseUri.getScheme() + canonicalUrl : canonicalUrl;
+            return baseUri.resolve(resolveTarget).toString();
+        } catch (final IllegalArgumentException e) {
             logger.warn("Invalid canonical URL: baseUrl={}, canonicalUrl={}", baseUrl, canonicalUrl, e);
         }
         return null;
@@ -982,9 +983,9 @@ public class FessXpathTransformer extends XpathTransformer implements FessTransf
         List<RequestData> anchorList = new ArrayList<>();
         final String baseHref = getBaseHref(document);
         try {
-            final URL url = getBaseUrl(responseData.getUrl(), baseHref);
+            final URI uri = getBaseUri(responseData.getUrl(), baseHref);
             for (final Map.Entry<String, String> entry : childUrlRuleMap.entrySet()) {
-                for (final String u : getUrlFromTagAttribute(url, document, entry.getKey(), entry.getValue(), responseData.getCharSet())) {
+                for (final String u : getUrlFromTagAttribute(uri, document, entry.getKey(), entry.getValue(), responseData.getCharSet())) {
                     anchorList.add(RequestDataBuilder.newRequestData().get().url(u).build());
                 }
             }
@@ -1001,18 +1002,18 @@ public class FessXpathTransformer extends XpathTransformer implements FessTransf
     }
 
     /**
-     * Gets the base URL for resolving relative URLs.
+     * Gets the base URI for resolving relative URLs.
      *
      * @param currentUrl the current URL
      * @param baseHref the base href value from HTML
-     * @return the base URL
-     * @throws MalformedURLException if the URL is malformed
+     * @return the base URI
+     * @throws URISyntaxException if the URI is malformed
      */
-    protected URL getBaseUrl(final String currentUrl, final String baseHref) throws MalformedURLException {
+    protected URI getBaseUri(final String currentUrl, final String baseHref) throws URISyntaxException {
         if (baseHref != null) {
-            return getURL(currentUrl, baseHref);
+            return getURI(currentUrl, baseHref);
         }
-        return new URL(currentUrl);
+        return URI.create(currentUrl);
     }
 
     /**
@@ -1089,19 +1090,19 @@ public class FessXpathTransformer extends XpathTransformer implements FessTransf
      * Adds child URL from tag attribute value.
      *
      * @param urlList the list to add URLs to
-     * @param url the base URL for resolving relative URLs
+     * @param uri the base URI for resolving relative URLs
      * @param attrValue the attribute value containing the URL
      * @param encoding the character encoding
      */
     @Override
-    protected void addChildUrlFromTagAttribute(final List<String> urlList, final URL url, final String attrValue, final String encoding) {
+    protected void addChildUrlFromTagAttribute(final List<String> urlList, final URI uri, final String attrValue, final String encoding) {
         final String urlValue = attrValue.trim();
-        URL childUrl;
         String u = null;
         try {
-            childUrl = new URL(url, urlValue.startsWith(":") ? url.getProtocol() + urlValue : urlValue);
-            u = encodeUrl(normalizeUrl(childUrl.toExternalForm()), encoding);
-        } catch (final MalformedURLException e) {
+            final String resolveTarget = urlValue.startsWith(":") ? uri.getScheme() + urlValue : urlValue;
+            final URI childUri = uri.resolve(resolveTarget);
+            u = encodeUrl(normalizeUrl(childUri.toString()), encoding);
+        } catch (final IllegalArgumentException e) {
             final int pos = urlValue.indexOf(':');
             if (pos > 0 && pos < 10) {
                 u = encodeUrl(normalizeUrl(urlValue), encoding);
@@ -1109,7 +1110,7 @@ public class FessXpathTransformer extends XpathTransformer implements FessTransf
         }
 
         if (u == null) {
-            logger.warn("Ignored child URL: childUrl={}, parentUrl={}", attrValue, url);
+            logger.warn("Ignored child URL: childUrl={}, parentUri={}", attrValue, uri);
             return;
         }
 
@@ -1161,9 +1162,9 @@ public class FessXpathTransformer extends XpathTransformer implements FessTransf
             if (thumbnailNode != null) {
                 final String content = thumbnailNode.getTextContent();
                 if (StringUtil.isNotBlank(content)) {
-                    final URL thumbnailUrl = getURL(responseData.getUrl(), content);
-                    if (thumbnailUrl != null) {
-                        return thumbnailUrl.toExternalForm();
+                    final URI thumbnailUri = getURI(responseData.getUrl(), content);
+                    if (thumbnailUri != null) {
+                        return thumbnailUri.toString();
                     }
                 }
             }
@@ -1173,9 +1174,9 @@ public class FessXpathTransformer extends XpathTransformer implements FessTransf
             if (ogImageNode != null) {
                 final String content = ogImageNode.getTextContent();
                 if (StringUtil.isNotBlank(content)) {
-                    final URL thumbnailUrl = getURL(responseData.getUrl(), content);
-                    if (thumbnailUrl != null) {
-                        return thumbnailUrl.toExternalForm();
+                    final URI thumbnailUri = getURI(responseData.getUrl(), content);
+                    if (thumbnailUri != null) {
+                        return thumbnailUri.toString();
                     }
                 }
             }
@@ -1227,9 +1228,9 @@ public class FessXpathTransformer extends XpathTransformer implements FessTransf
         final Node srcNode = attributes.getNamedItem("src");
         if (srcNode != null) {
             try {
-                final URL thumbnailUrl = getURL(url, srcNode.getTextContent());
-                if (thumbnailUrl != null) {
-                    return thumbnailUrl.toExternalForm();
+                final URI thumbnailUri = getURI(url, srcNode.getTextContent());
+                if (thumbnailUri != null) {
+                    return thumbnailUri.toString();
                 }
             } catch (final Exception e) {
                 if (logger.isDebugEnabled()) {
@@ -1267,27 +1268,27 @@ public class FessXpathTransformer extends XpathTransformer implements FessTransf
     }
 
     /**
-     * Creates a URL object from the current URL and a relative or absolute URL string.
+     * Creates a URI object from the current URL and a relative or absolute URL string.
      *
      * @param currentUrl the current URL as base
      * @param url the URL string to process
-     * @return the URL object
-     * @throws MalformedURLException if the URL is malformed
+     * @return the URI object
+     * @throws URISyntaxException if the URI is malformed
      */
-    protected URL getURL(final String currentUrl, final String url) throws MalformedURLException {
+    protected URI getURI(final String currentUrl, final String url) throws URISyntaxException {
         if (url != null) {
             if (url.startsWith("://")) {
                 final String protocol = currentUrl.split(":")[0];
-                return new URL(protocol + url);
+                return URI.create(protocol + url);
             }
             if (url.startsWith("//")) {
                 final String protocol = currentUrl.split(":")[0];
-                return new URL(protocol + ":" + url);
+                return URI.create(protocol + ":" + url);
             }
             if (url.startsWith("/") || url.indexOf(':') == -1) {
-                return new URL(new URL(currentUrl), url);
+                return URI.create(currentUrl).resolve(url);
             }
-            return new URL(url);
+            return URI.create(url);
         }
         return null;
     }
